--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -34,9 +34,11 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <h3>Poverty vs. Lack of Healthcare</h3>
+          <p>Based on the data in this scatter plot, it shows that there is a positive, linear relationship between poverty and
+            and the lack of healthcare. Based on the states, it appears that the states with higher poverty levels and higher 
+            need for healthcare are found in the southern portion of the US.
+          </p>
 
           <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
             quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
