--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -34,19 +34,31 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <h3>Poverty vs. Lack of Healthcare</h3>
+
+          <h5>Poverty vs. Lack of Healthcare</h5>
           <p>Based on the data in this scatter plot, it shows that there is a positive, linear relationship between poverty and
             and the lack of healthcare. Based on the states, it appears that the states with higher poverty levels and higher 
-            need for healthcare are found in the southern portion of the US.
+            need for healthcare are found most often in the southern region of the US.
           </p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <h5>Age vs. Lack of Healthcare</h5>
+          <p>After reviewing the data in the scatter plot, there appears to be a minimal but positive, somewhat linear relationship between 
+            the median age in a state and lack of healthcare. The dots are pretty spread out so the relationship between the two is weak. 
+            With the exception of some outliers, it does look like states with an older median age do have more healthcare coverage.
+          </p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <h5>Age vs. Smoking</h5>
+          <p>Based on the data in this scatter plot, there does appear to be a positive, linear relationship between a state's median age 
+            and the percentage of smokers. Utah, with the youngest population also seems to have the least number of smokers so hopefully 
+            that's a good sign for future generations of non-smokers. California and Texax, the two states with the biggest populations, 
+            are also on the lower end of the smoker percentage.
+          </p>
+          
+          <h5>Poverty vs. Smoking</h5>
+          <p>After analyzing the data in this scatter plot, there does appear to be a positive, linear relationship between poverty 
+            and the percentage of smokers. It's not a strong relationship as the dots are somewhat widespread. But the pattern is 
+            uphill so it's positive.
+          </p>
         </div>
       </div>
     </div>
