finished proofreading the README and the analysis section of the index.html file

--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -47,7 +47,7 @@
 
           <h5>Age vs. Smoking</h5>
           <p>Based on the data in this scatter plot, there does appear to be a positive, linear relationship between a state's median age 
-            and the percentage of smokers. Utah, with the youngest population also seems to have the least number of smokers so hopefully 
+            and the percentage of smokers. Utah, with the youngest population, also seems to have the fewest number of smokers so hopefully 
             that's a good sign for future generations of non-smokers. California and Texax, the two states with the biggest populations, 
             are also on the lower end of the smoker percentage.
           </p>
