added analysis for each of the new plots now that I added the third option on each axis

--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -57,6 +57,34 @@
             and the percentage of smokers. It's not a strong relationship as the dots are somewhat widespread. But the pattern is 
             uphill so it's positive.
           </p>
+
+          <h5>Poverty vs. Obesity</h5>
+          <p>Based on the data in this scatter plot, there does appear to be a positive, linear relationship between poverty 
+            and the percentage of obese people. It's not a strong relationship as the dots are somewhat widespread. But the pattern is 
+            uphill so it's positive. There might be a few outliers, though.
+          </p>
+
+          <h5>Age vs. Obesity</h5>
+          <p>After analyzing the data in this scatter plot, there does appear to be a minimal but positive, somewhat linear relationship between 
+            a state's median age and obesity. The dots, however, are pretty widespread so the relationship between the two is rather weak.
+          </p>
+
+          <h5>Household Income vs. Lack of Healthcare</h5>
+          <p>Based on the data in this scatter plot, there appears to be a negative, somewhat linear relationship between 
+            a state's median household income and a lack of healthcare. The dots are kind of widespread with at least one potential outlier 
+            so the relationship between the two is weak to moderate.
+          </p>
+
+          <h5>Household Income vs. Smoking</h5>
+          <p>After analyzing the data in this scatter plot, there does appear to be negative, linear relationship between 
+            a state's median household income and smoking. The dots are sort of clustered together so the relationship between the two is moderate.
+          </p>
+
+          <h5>Household Income vs. Obesity</h5>
+          <p>Based on the data in this scatter plot, there is a negative, linear relationship between a state's median household income and obesity. The dots
+            are somewhat spread out, though, so the relationship between the two is weak to moderate. It is interesting that as household income increases, 
+            the dots become more widespread.
+          </p>
         </div>
       </div>
     </div>
